--- a/keyboard/keyboard.css
+++ b/keyboard/keyboard.css
@@ -51,3 +51,22 @@
   width: 36%;
   max-width: 500px;
 }
+
+.keyboard__key--activatable::after {
+  content: "";
+  top: 10px;
+  right: 10px;
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: rgba(0, 0, 0, .4);
+  border-radius: 50%;
+}
+
+.keyboard__key--active {
+  background-color: #08ff00;
+}
+
+.keyboard__key--dark {
+  background-color: rgba(0, 0, 0, .25);
+}
